--- a/sass/_realtors.scss
+++ b/sass/_realtors.scss
@@ -2,11 +2,16 @@
   background-color: $color-secondary;
   grid-column: col-start 7 / full-end;
   padding: 3rem;
+
   display: grid;
-  justify-content: center;
   align-content: center;
+  justify-content: center;
   justify-items: center;
   grid-row-gap: 2rem;
+
+  @media only screen and (max-width: $bp-medium) {
+    grid-column: 1 / -1;
+  }
 
   &__list {
     display: grid;
@@ -14,6 +19,14 @@
     grid-column-gap: 2rem;
     grid-row-gap: 5vh;
     align-items: center;
+
+    @media only screen and (max-width: $bp-medium) {
+      grid-template-columns: repeat(3, min-content max-content);
+    }
+
+    @media only screen and (max-width: $bp-small) {
+      grid-template-columns: min-content max-content;
+    }
   }
 
   &__img {
